  * Add more worker states in STARPU_PROFILING: callback, waiting, scheduling.
  * Support for hierarchical tasks
  * Support mapping memory between CPU RAM and GPU RAM, instead of copying
    data.
  * New function starpu_get_memory_location_bitmap() and register in traces on
    which NUMA node are buffers used for MPI or tasks.
  * TCP/IP-based master-slave support.

Small features:
  * New configure option --with-check-cflags to define flags for C,
    CXX and Fortran compilers
  * FxT is now automatically enabled at build-time, but not enabled at
    run-time by default any more, STARPU_FXT_TRACE needs to be explicitly set to
    1 to enable FxT trace recording.
  * Deprecate starpu_free() and add new function starpu_free_noflag()
    to specify allocated size.
  * Reuse matrix tiles that have different shapes but same allocation size.
  * Add starpu_task_create_sync
  * Add ram_colind/rowptr to csr and bcsr data interfaces. This allows to make
    starpu_bcsr_filter_vertical_block work on several memory nodes.
  * Add cuda0 and cuda1 example drivers.
  * New STARPU_EXPECTED_TRANSFER_TIME_WRITEBACK environment variable to tune
    transfer estimation times.
  * Add tool starpu_config to display the configuration StarPU was
    compiled with
  * Possibility to enable data locality enforcement when choosing a
    worker to run a task implementation
  * New function starpu_data_partition_clean_node() to specify node on
    which to gather data
  * Move to the public API some scheduler utility functions
  * New variable STARPU_SCHED_LIB to dynamically load a new scheduling
    policy
  * Enable GPUDirect when MPI supports it.
  * Install a module file in lib/modules
  * New function starpu_worker_wait_for_initialisation() which waits
    for all workers to be initialised
  * Add in the public API the codelet starpu_codelet_nop which has an
    empty function defined for all drivers
  * Add starpu_task_expected_length_average and