@@ -80,6 +80,8 @@ New features:
   * New function starpu_get_memory_location_bitmap() and register in traces on
     which NUMA node are buffers used for MPI or tasks.
   * TCP/IP-based master-slave support.
+  * Use process binding as provided by the job scheduler by default, unless
+    told otherwise with STARPU_WORKERS_CPUID_FROM_PROCESS
 
 Small features:
   * New configure option --with-check-cflags to define flags for C,
